---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-04-14
  Changes:
    - Move technology changes to data updates
    - Change kiln smelting technology to always be a research trigger
    - Simplify recipe for electric kiln to be a slightly more expensive electric furnace
    - Reduce module slot count for electric kiln back to 2
  Compatibility:
    - AAI Industry: Add kiln smelting recipes to Industrial furnace, and increase its cost to include LDS and an electric kiln
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-03-29
  Compatibility:
    - Reintroduce adding tin plate to glass smelting as an optional feature (enabled by default)
    - Fix compatibility with bronze plates from Tin
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2025-03-22
  Balancing:
    - Increase Coke value from 1MJ to 1.6MJ
  Compatibility:
    - Respect "Hide from player crafting" setting from Crushing Industry
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2025-03-22
  Bugfixes:
    - Tungsten carbide can now be crafted in both assembling machines and electric kilns
    - Fix organic or kiln smelting being added by Wooden Industry instead
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2025-03-20
  Compatibility:
    - Fixed smelting time for Lead plate from crushed ore
    - Properly move smelting of crushed lead and titanium ore to "kiln-smelting"
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-03-20